Fix white space on right side of page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Mono:400,500,700&subset=cyrillic');
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .top_banner {
     font-family: 'Fira Mono', monospace;
 }
